# Sequoia

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
data/: .gitignore
sequoia/: __init__.py  agent.py  brain.py  cli.py  memory.py  subagents.py  tools.py
sequoia/cli/: __init__.py  command_handler.py  dialogue_handler.py  main.py
sequoia/config/: __init__.py  loader.py  schema.py
sequoia/tools/: __init__.py  chroma.py  command_tools.py  file_tools.py  fs.py  novel.py  shell_tools.py  surrealdb.py  time_tools.py
tests/: conftest.py  test_brain.py  test_chroma.py  test_chroma_mock.py  test_cli_integration.py  test_commands.py  test_memory.py  test_memory_simple.py  test_surrealdb.py  test_surrealdb_basic.py  test_surrealdb_full.py  test_time_tools.py  test_vector_store.py  test_vector_store_mock.py
tests/sequoia/config/: test_config.py
