[project]
name = "sequoia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic-ai>=1.63.0",
]

[dependency-groups]
dev = [
    "pytest>=7.1.1,<8",
    "pre-commit>=4.0.1,<5",
    "pytest-asyncio>=0.18.3,<0.19",
    "pytest-cov>=5.0.0,<6",
    "ordered-set>=4.1.0,<5",
    "ruff>=0.5.0,<1",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.uv]

[[tool.uv.index]]
name = "bfsu"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.mypy]
files = ["goomba", ]
ignore_missing_imports = true
python_version = '3.12'

[tool.ruff]
fix = true
target-version = "py312"
extend-include = ["*.py", "*.pyi"]
exclude = [
    "docs",
    ".git",
    ".mypy_cache",
    ".venv",
]

[tool.ruff.lint]
select = [
    #    "A",  # flake8-builtins
    #    "ANN",  # flake8-annotations
    #    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    #    "BLE",  # flake8-blind-except
    "C",  # flake8-comprehensions
    #    "D",  # pydocstyle
    "E",  # pycodestyle errors
    #    "ERA",  # eradicate
    "F",  # pyflakes
    #    "FBT",  # flake8-boolean-trap
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "N",  # pep8-naming
    #    "PGH",  # pygrep-hooks
    "PLC", "PLE", "PLR", "PLW",  # Pylint
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    #    "RUF",  # Ruff-specific rules
    #    "S",  # flake8-bandit
    #    "T",  # flake8-debugger
    #    "TID",  # flake8-tidy-imports
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]
ignore = [
    "C901",  # too complex
    "B905",  # `zip()` without an explicit `strict=` parameter
    "S101",  # Use of `assert` detected
    "S104",  # Possible binding to all interfaces
    "S108",  # Probable insecure usage of temporary file or directory
    "RET504",  # Unnecessary variable assignment before `return` statement
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = ["goomba"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
