[project]
name = "sequoia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "surrealdb>=1.0.8",
    "python-dotenv>=1.0.0",
    "deepagents>=0.4.7",
    "fastapi>=0.135.1",
    "langgraph-cli[inmem]>=0.4.15",
    "chainlit>=2.10.0",
    "langchain-ollama>=1.0.1",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sequoia*"]

[dependency-groups]
dev = [
    "types-pytz>=2022.1.0",
    "mypy>=1.19.1",
    "pytest>=7.4.4",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
    "pytest-cov>=7.0.0",
    "ordered-set>=4.1.0",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.uv]

[[tool.uv.index]]
name = "bfsu"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.mypy]
files = ["sequoia", "tests"]
python_version = '3.12'
ignore_missing_imports = true

[tool.ruff]
fix = true
target-version = "py312"
extend-include = ["*.py", "*.pyi"]
exclude = [
    "docs",
    ".git",
    ".mypy_cache",
    ".venv",
]

[tool.ruff.lint]
select = [
    #    "A",  # flake8-builtins
    #    "ANN",  # flake8-annotations
    #    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    #    "BLE",  # flake8-blind-except
    "C",  # flake8-comprehensions
    #    "D",  # pydocstyle
    "E",  # pycodestyle errors
    #    "ERA",  # eradicate
    "F",  # pyflakes
    #    "FBT",  # flake8-boolean-trap
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "N",  # pep8-naming
    #    "PGH",  # pygrep-hooks
    "PLC", "PLE", "PLW",  # Pylint
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    #    "RUF",  # Ruff-specific rules
    #    "S",  # flake8-bandit
    #    "T",  # flake8-debugger
    #    "TID",  # flake8-tidy-imports
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]
ignore = [
    "C901",  # too complex
    "B905",  # `zip()` without an explicit `strict=` parameter
    "S101",  # Use of `assert` detected
    "S104",  # Possible binding to all interfaces
    "S108",  # Probable insecure usage of temporary file or directory
    "RET504",  # Unnecessary variable assignment before `return` statement
    "PLR2004",  # Magic value used in comparison
    "PLR0912", # Too many branches
    "E731", # lambda
]

[tool.ruff.lint.isort]
known-first-party = ["sequoia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
